# ciftisample

./: .gitignore  README.md  pyproject.toml  setup.py
ciftisample/: pipeline_description.json  run.py
ciftisample/config/: bids.json  snakebids.yml
ciftisample/workflow/: Snakefile
docs/: conf.py  requirements.txt
docs/getting_started/: installation.md
docs/usage/: app_cli.md
hipposample/: pipeline_description.json
