[tool.poetry]
name = "hipposample"
version = "0.1.0"
description = "Tool for sampling volume images across bids datasets to surface space."
authors = ["Mohamed Yousif <myousif9@uwo.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
snakebids = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
